# advent-of-code

./: .gitignore
2019/1/: main.hs
2019/2/: part-1.hs  part-2.hs
2019/3/: part-1.hs
2019/4/: part-1.hs  part-2.hs
2019/5/: part-1.hs  part-2.hs
2019/7/: part-1.hs  part-2.hs
2021/: 1-1.hs  1-2.hs  2-1.hs  2-2.hs  3-1.hs  3-2.hs  3.show.output  4-1.hs  4-2.hs  5-1.hs  6-1.hs  advent.cabal  advent.nix  shell.nix
2022/: 1-1.hs  1-2.hs  2-1.hs  2-2.hs  3-1.hs  4-1.hs  4-2.hs  5-1.hs  5-2.hs  6-1.hs  6-2.hs  7-1.hs  7-2.hs  8-1.hs  8-2.hs  9-1.hs  advent.cabal  advent.nix  cabal.fish  shell.nix
2023/: 1-1.hs  1-2.hs  11-1.hs  11-2.hs  2-1.hs  2-2.hs  3-1.hs  3-2.hs  4-1.hs  4-2.hs  5-1.hs  5-2.hs  6-1.hs  6-2.hs  7-1.hs  7-2.hs  8-1.hs  8-2.hs  9-1.hs  9-2.hs  advent.cabal  cabal.project  release.nix
Puzzle 1/: part-1.hs  part-2.hs
Puzzle 2/: part-1.hs  part-2.hs
