cabal-version:      2.4
name:               advent
version:            1.0.0
synopsis:           Advent of code 2021
license:            GPL-3.0-or-later
author:             Emily Bourke
copyright:          Emily Bourke
maintainer:         undergroundquizscene@protonmail.com

executable 1-1
  main-is: 1-1.hs
  other-modules:
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -Wunused-packages
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010

executable 1-2
  main-is: 1-2.hs
  other-modules:
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -Wunused-packages
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010

executable 2-1
  main-is: 2-1.hs
  other-modules:
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -Wunused-packages
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010

executable 2-2
  main-is: 2-2.hs
  other-modules:
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -Wunused-packages
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010

executable 3-1
  main-is: 3-1.hs
  other-modules:
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010

executable 3-2
  main-is: 3-2.hs
  other-modules:
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010

executable 4-1
  main-is: 4-1.hs
  other-modules:
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text,
      vector
  default-language: Haskell2010

executable 4-2
  main-is: 4-2.hs
  other-modules:
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text,
      vector
  default-language: Haskell2010

executable 5-1
  main-is: 5-1.hs
  other-modules:
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      containers
  default-language: Haskell2010

executable 6-1
  main-is: 6-1.hs
  other-modules:
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      containers
  default-language: Haskell2010
