cabal-version:      2.4
name:               advent
version:            1.0.0
synopsis:           Advent of code 2023
license:            GPL-3.0-or-later
author:             Emily Bourke
copyright:          Emily Bourke
maintainer:         emily@emdash.ie

executable 1-1
  main-is: 1-1.hs
  other-modules:
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
  default-language: Haskell2010

executable 1-2
  main-is: 1-2.hs
  other-modules:
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      text
  default-language: Haskell2010
